Updates config to apply new array DSL parser

--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -21,10 +21,21 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of Subjects, which are used to determine what certificate to check, within the CertStore."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_CertSubject$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 7
         }
@@ -55,10 +66,21 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of paths on your system, where certificate files are. Use with CertName."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_CertPaths$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 9
         }
@@ -66,10 +88,21 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of Thumbprints, which are used to determine what certificate to check, within the CertStore."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_CertThumbprint$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 6
         }
@@ -81,10 +114,21 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             description = "Used to specify an array of certificate names of certificate files to check. Use with CertPaths."
             value = {{
                 var arr = macro("$IcingaCheckCertificate_Array_CertName$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 10
         }
