--- a/config/icinga/Invoke-IcingaCheckDiskHealth.conf
+++ b/config/icinga/Invoke-IcingaCheckDiskHealth.conf
@@ -24,10 +24,21 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             description = "Specify the index id of disks you want to exclude from checks. Example 0, 1"
             value = {{
                 var arr = macro("$IcingaCheckDiskHealth_Array_ExcludeDisk$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 3
         }
@@ -39,10 +50,21 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             description = "Specify the index id of disks you want to include for checks. Example 0, 1"
             value = {{
                 var arr = macro("$IcingaCheckDiskHealth_Array_IncludeDisk$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 2
         }
@@ -60,10 +82,21 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             description = "Specify the partition drive letters for disks to include for checks. Example C:, D:"
             value = {{
                 var arr = macro("$IcingaCheckDiskHealth_Array_IncludePartition$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 4
         }
@@ -115,10 +148,21 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             description = "Specify the partition drive letters for disks to exclude from checks. Example C:, D:"
             value = {{
                 var arr = macro("$IcingaCheckDiskHealth_Array_ExcludePartition$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 5
         }
