--- a/config/icinga/Invoke-IcingaCheckEventlog.conf
+++ b/config/icinga/Invoke-IcingaCheckEventlog.conf
@@ -15,10 +15,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of messages within the eventlog to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeMessage$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 11
         }
@@ -26,10 +37,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of message sources within the eventlog to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeSource$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 13
         }
@@ -42,10 +64,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of events identified by their id to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeEventId$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 5
         }
@@ -62,10 +95,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of message sources within the eventlog to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeSource$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 14
         }
@@ -73,10 +117,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of usernames within the eventlog to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeUsername$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 8
         }
@@ -84,10 +139,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of entry types within the eventlog to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeEntryType$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 10
         }
@@ -95,10 +161,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of entry types within the eventlog to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeEntryType$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 9
         }
@@ -110,10 +187,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of events identified by their id to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeEventId$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 6
         }
@@ -135,10 +223,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of usernames within the eventlog to be included."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_IncludeUsername$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 7
         }
@@ -146,10 +245,21 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             description = "Used to specify an array of messages within the eventlog to be excluded."
             value = {{
                 var arr = macro("$IcingaCheckEventlog_Array_ExcludeMessage$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 12
         }
