--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -6,10 +6,21 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             description = "A list of tasks to check for. If your tasks contain spaces, wrap them around a ' to ensure they are properly handled as string"
             value = {{
                 var arr = macro("$IcingaCheckScheduledTask_Array_TaskName$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 2
         }
@@ -25,10 +36,21 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             description = "The state a task should currently have for the plugin to return [OK]"
             value = {{
                 var arr = macro("$IcingaCheckScheduledTask_Array_State$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 3
         }
