--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -20,10 +20,21 @@ object CheckCommand "Invoke-IcingaCheckService" {
             description = "Used to specify an array of services which should be checked against the status. Supports '*' for wildcards."
             value = {{
                 var arr = macro("$IcingaCheckService_Array_Service$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 2
         }
@@ -31,10 +42,21 @@ object CheckCommand "Invoke-IcingaCheckService" {
             description = "Allows to exclude services which might come in handy for checking services which are configured to start automatically on Windows but are not running and weren't exited properly."
             value = {{
                 var arr = macro("$IcingaCheckService_Array_Exclude$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 3
         }
