--- a/config/icinga/Invoke-IcingaCheckStoragePool.conf
+++ b/config/icinga/Invoke-IcingaCheckStoragePool.conf
@@ -53,10 +53,21 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             description = "With this parameter you can filter out which StoragePools you want to check, provided you have several StoragePools on your system."
             value = {{
                 var arr = macro("$IcingaCheckStoragePool_Array_IncludeStoragePool$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 2
         }
@@ -64,10 +75,21 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             description = "With this parameter you can filter out which StoragePools you do not want to check, provided you have several StoragePools on your system."
             value = {{
                 var arr = macro("$IcingaCheckStoragePool_Array_ExcludeStoragePool$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 3
         }
