--- a/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
@@ -24,10 +24,21 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:\\','D:\\'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Include$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 4
         }
@@ -44,10 +55,21 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             description = "Used to specify an array of partitions to be excluded. e.g. 'C:\\','D:\\'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Exclude$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 5
         }
