--- a/config/icinga/Invoke-IcingaCheckFirewall.conf
+++ b/config/icinga/Invoke-IcingaCheckFirewall.conf
@@ -14,10 +14,21 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
             description = "Used to specify an array of profiles to check. Available profiles are 'Domain', 'Public', 'Private'"
             value = {{
                 var arr = macro("$IcingaCheckFirewall_Array_Profile$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 2
         }
