--- a/config/icinga/Invoke-IcingaCheckNLA.conf
+++ b/config/icinga/Invoke-IcingaCheckNLA.conf
@@ -15,10 +15,21 @@ object CheckCommand "Invoke-IcingaCheckNLA" {
             description = "Used to specify the NICs where to check the filewall profile. When not presented every nic which is active will be checked"
             value = {{
                 var arr = macro("$IcingaCheckNLA_Array_NICs$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 4
         }
