--- a/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
+++ b/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
@@ -108,10 +108,21 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             description = "Specify the index of network adapters you want to include for checks. Example 4, 3"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_IncludeNetworkDevice$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 2
         }
@@ -144,10 +155,21 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             description = "Specify the name of network interface teams you want to include for checks. Example OutboundGroup, ClusterInterface"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_IncludeInterfaceTeam$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 5
         }
@@ -190,10 +212,21 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             description = "Specify the index of network adapters you want to exclude for checks. Example 4, 3"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_ExcludeNetworkDevice$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 3
         }
@@ -206,10 +239,21 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             description = "Specify the name of network interface teams you want to exclude for checks. Example OutboundGroup, ClusterInterface"
             value = {{
                 var arr = macro("$IcingaCheckNetworkInterface_Array_ExcludeInterfaceTeam$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 4
         }
