--- a/config/icinga/Invoke-IcingaCheckPerfcounter.conf
+++ b/config/icinga/Invoke-IcingaCheckPerfcounter.conf
@@ -6,10 +6,21 @@ object CheckCommand "Invoke-IcingaCheckPerfcounter" {
             description = "Used to specify an array of performance counter to check against."
             value = {{
                 var arr = macro("$IcingaCheckPerfcounter_Array_PerfCounter$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 2
         }
