--- a/config/icinga/Invoke-IcingaCheckTCP.conf
+++ b/config/icinga/Invoke-IcingaCheckTCP.conf
@@ -38,10 +38,21 @@ object CheckCommand "Invoke-IcingaCheckTCP" {
             description = "A single or a list of ports to check on the target address"
             value = {{
                 var arr = macro("$IcingaCheckTCP_Array_Ports$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 3
         }
