--- a/config/icinga/Invoke-IcingaCheckUsers.conf
+++ b/config/icinga/Invoke-IcingaCheckUsers.conf
@@ -28,10 +28,21 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
             description = "Used to specify an array of usernames to match against.  e.g 'Administrator', 'Icinga'"
             value = {{
                 var arr = macro("$IcingaCheckUsers_Array_Username$");
-                if (len(arr) == 0) {
-                return "@()";
-                }
-                return arr.join(",");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
             }}
             order = 2
         }
